[package]
name = "sol-acc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64ct = { version = "1.8.0", features = ["alloc"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
color-eyre = "0.6.5"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-address-lookup-table-interface = "3.0.0"
solana-client = "3.1.3"
solana-pubkey = { version = "4.0.0", features = ["curve25519", "serde", "borsh"] }
